# captcha2text

./: Readme.md  app.py  captcha_reader.py  captcha_reader_test.py  pyproject.toml
